--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     implementation 'io.quarkus:quarkus-config-yaml'
-    implementation("io.quarkus:quarkus-logging-gelf")
+    implementation 'io.quarkus:quarkus-logging-gelf'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-smallrye-health'
     implementation 'io.quarkus:quarkus-resteasy-reactive'
@@ -26,7 +26,9 @@ dependencies {
 //    implementation 'io.quarkus:quarkus-oidc'
 //    implementation 'io.quarkus:quarkus-keycloak-authorization'
     implementation 'io.quarkus:quarkus-hibernate-orm-panache'
-    implementation "io.quarkus:quarkus-hibernate-validator"
+    implementation 'io.quarkus:quarkus-hibernate-validator'
+    implementation 'io.quarkus:quarkus-rest-client'
+    implementation 'io.quarkus:quarkus-rest-client-jackson'
 
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
